z-index correction

--- a/ressources/docs-builder/styles/_base.scss
+++ b/ressources/docs-builder/styles/_base.scss
@@ -41,6 +41,7 @@ header {
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: $docs-header-zindex;
 	width: 100%;
 	padding: 1em 1em 1em 5em;
 	background-color: $docs-header-bg-color;
